syntax = "proto3";

package runtime.api.config.middleware.jwt.v1;

import "config/security/authn/jwt/v1/config.proto";
import "gnostic/openapi/v3/annotations.proto";
import "validate/validate.proto";

option go_package = "github.com/origadmin/runtime/api/gen/go/config/middleware/jwt/v1;jwtv1";

// JSON Web Token
message JWT {
  string subject = 1 [json_name = 'subject'];
  string claim_type = 2 [
    json_name = 'claim_type',
    (validate.rules).string = {
      in: [
        "map",
        "registered"
      ]
    },
    (gnostic.openapi.v3.property) = {description: "The type of the claim used to extract the token."}
  ];
  map<string, string> token_header = 3 [json_name = 'token_header'];
  // The token used security.authn.v1.
  runtime.api.config.security.authn.jwt.v1.Config config = 100 [
    json_name = "config",
    (gnostic.openapi.v3.property) = {description: "The configuration used to create the token."}
  ];
}
